Fixing the text overflowing

--- a/assets/scss/components/_social-proof.scss
+++ b/assets/scss/components/_social-proof.scss
@@ -14,7 +14,7 @@
   &__link {
     @extend %u-pad-2;
     display: grid;
-    grid-template-rows: repeat(3, 47px);
+    grid-template-rows: 1fr 4rem 1fr;
 
     @include breakpoint(upto-large) {
       flex-grow: 1;
@@ -43,5 +43,10 @@
     @extend %u-sailec;
     @extend %u-color-black;
     font-size: 13px;
+
+    & p {
+      margin: 0;
+      padding-top: 1rem;
+    }
   }
 }
